C2P_Translator/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT_MULTI
    COMMENT_SINGLE

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> function_declaration
Rule 6     declaration -> function_definition
Rule 7     declaration -> array_declaration
Rule 8     var_declaration -> var_direct_declaration
Rule 9     var_declaration -> var_pointer_declaration
Rule 10    var_declaration -> var_declaration_init
Rule 11    var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 12    var_pointer_declaration -> type_specifier TIMES IDENTIFIER SEMICOLON
Rule 13    var_declaration_init -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 14    array_declaration -> type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
Rule 15    array_declaration -> type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
Rule 16    array_declaration -> type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
Rule 17    array_declaration -> type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
Rule 18    array_declaration -> type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
Rule 19    type_specifier -> INT
Rule 20    type_specifier -> FLOAT
Rule 21    type_specifier -> CHAR
Rule 22    type_specifier -> VOID
Rule 23    array_list -> array_list COMMA expression
Rule 24    array_list -> expression
Rule 25    function_declaration -> type_specifier IDENTIFIER LPAREN param_list RPAREN SEMICOLON
Rule 26    function_definition -> type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
Rule 27    param_list -> param_list COMMA param
Rule 28    param_list -> param
Rule 29    param_list -> empty
Rule 30    param -> type_specifier IDENTIFIER
Rule 31    param -> type_specifier IDENTIFIER LBRACKET RBRACKET
Rule 32    param -> type_specifier TIMES IDENTIFIER
Rule 33    empty -> <empty>
Rule 34    compound_statement -> LBRACE statement_list RBRACE
Rule 35    statement_list -> statement_list statement
Rule 36    statement_list -> statement
Rule 37    statement -> expression_statement
Rule 38    statement -> compound_statement
Rule 39    statement -> selection_statement
Rule 40    statement -> iteration_statement
Rule 41    statement -> return_statement
Rule 42    statement -> continue_statement
Rule 43    statement -> break_statement
Rule 44    statement -> var_declaration
Rule 45    statement -> array_declaration
Rule 46    statement -> empty
Rule 47    expression_statement -> expression SEMICOLON
Rule 48    expression -> assignment_expression
Rule 49    expression -> binary_expression
Rule 50    expression -> unary_expression
Rule 51    expression -> function_call
Rule 52    expression -> array_access
Rule 53    expression -> term
Rule 54    assignment_expression -> IDENTIFIER ASSIGN expression
Rule 55    assignment_expression -> array_access ASSIGN expression
Rule 56    binary_expression -> expression PLUS expression
Rule 57    binary_expression -> expression MINUS expression
Rule 58    binary_expression -> expression TIMES expression
Rule 59    binary_expression -> expression DIVIDE expression
Rule 60    binary_expression -> expression MOD expression
Rule 61    binary_expression -> expression EQ expression
Rule 62    binary_expression -> expression NEQ expression
Rule 63    binary_expression -> expression LT expression
Rule 64    binary_expression -> expression GT expression
Rule 65    binary_expression -> expression LTE expression
Rule 66    binary_expression -> expression GTE expression
Rule 67    binary_expression -> expression AND expression
Rule 68    binary_expression -> expression OR expression
Rule 69    unary_expression -> MINUS expression
Rule 70    unary_expression -> NOT expression
Rule 71    unary_expression -> INC IDENTIFIER
Rule 72    unary_expression -> DEC IDENTIFIER
Rule 73    unary_expression -> IDENTIFIER INC
Rule 74    unary_expression -> IDENTIFIER DEC
Rule 75    term -> IDENTIFIER
Rule 76    term -> INT_LITERAL
Rule 77    term -> FLOAT_LITERAL
Rule 78    term -> CHAR_LITERAL
Rule 79    term -> STRING_LITERAL
Rule 80    term -> LPAREN expression RPAREN
Rule 81    function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 82    array_access -> IDENTIFIER LBRACKET expression RBRACKET
Rule 83    argument_list -> argument_list COMMA expression
Rule 84    argument_list -> expression
Rule 85    argument_list -> empty
Rule 86    selection_statement -> IF LPAREN expression RPAREN statement
Rule 87    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 88    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 89    iteration_statement -> for_expression_statement
Rule 90    iteration_statement -> for_var_declaration
Rule 91    for_expression_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 92    for_var_declaration -> FOR LPAREN var_declaration expression_statement expression RPAREN statement
Rule 93    return_statement -> RETURN expression SEMICOLON
Rule 94    continue_statement -> CONTINUE SEMICOLON
Rule 95    break_statement -> BREAK SEMICOLON

Terminals, with rules where they appear

AND                  : 67
ASSIGN               : 13 15 16 17 18 54 55
BREAK                : 95
CHAR                 : 21
CHAR_LITERAL         : 78
COMMA                : 23 27 83
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
CONTINUE             : 94
DEC                  : 72 74
DIVIDE               : 59
ELSE                 : 87
EQ                   : 61
FLOAT                : 20
FLOAT_LITERAL        : 77
FOR                  : 91 92
GT                   : 64
GTE                  : 66
IDENTIFIER           : 11 12 13 14 15 16 17 18 25 26 30 31 32 54 71 72 73 74 75 81 82
IF                   : 86 87
INC                  : 71 73
INT                  : 19
INT_LITERAL          : 76
LBRACE               : 15 16 34
LBRACKET             : 14 15 16 17 18 31 82
LPAREN               : 25 26 80 81 86 87 88 91 92
LT                   : 63
LTE                  : 65
MINUS                : 57 69
MOD                  : 60
NEQ                  : 62
NOT                  : 70
OR                   : 68
PLUS                 : 56
RBRACE               : 15 16 34
RBRACKET             : 14 15 16 17 18 31 82
RETURN               : 93
RPAREN               : 25 26 80 81 86 87 88 91 92
SEMICOLON            : 11 12 13 14 15 16 17 18 25 47 93 94 95
STRING_LITERAL       : 17 18 79
TIMES                : 12 32 58
VOID                 : 22
WHILE                : 88
error                : 

Nonterminals, with rules where they appear

argument_list        : 81 83
array_access         : 52 55
array_declaration    : 7 45
array_list           : 15 16 23
assignment_expression : 48
binary_expression    : 49
break_statement      : 43
compound_statement   : 26 38
continue_statement   : 42
declaration          : 2 3
declaration_list     : 1 2
empty                : 29 46 85
expression           : 13 14 15 17 23 24 47 54 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 70 80 82 83 84 86 87 88 91 92 93
expression_statement : 37 91 91 92
for_expression_statement : 89
for_var_declaration  : 90
function_call        : 51
function_declaration : 5
function_definition  : 6
iteration_statement  : 40
param                : 27 28
param_list           : 25 26 27
program              : 0
return_statement     : 41
selection_statement  : 39
statement            : 35 36 86 87 87 88 91 92
statement_list       : 34 35
term                 : 53
type_specifier       : 11 12 13 14 15 16 17 18 25 26 30 31 32
unary_expression     : 50
var_declaration      : 4 44 92
var_declaration_init : 10
var_direct_declaration : 8
var_pointer_declaration : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . function_definition
    (7) declaration -> . array_declaration
    (8) var_declaration -> . var_direct_declaration
    (9) var_declaration -> . var_pointer_declaration
    (10) var_declaration -> . var_declaration_init
    (25) function_declaration -> . type_specifier IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (26) function_definition -> . type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
    (14) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (15) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (16) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (17) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (18) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (11) var_direct_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (12) var_pointer_declaration -> . type_specifier TIMES IDENTIFIER SEMICOLON
    (13) var_declaration_init -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT
    (21) type_specifier -> . CHAR
    (22) type_specifier -> . VOID

    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 14
    VOID            shift and go to state 15

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    function_definition            shift and go to state 6
    array_declaration              shift and go to state 7
    var_direct_declaration         shift and go to state 8
    var_pointer_declaration        shift and go to state 9
    var_declaration_init           shift and go to state 10
    type_specifier                 shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . function_definition
    (7) declaration -> . array_declaration
    (8) var_declaration -> . var_direct_declaration
    (9) var_declaration -> . var_pointer_declaration
    (10) var_declaration -> . var_declaration_init
    (25) function_declaration -> . type_specifier IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (26) function_definition -> . type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
    (14) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (15) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (16) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (17) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (18) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (11) var_direct_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (12) var_pointer_declaration -> . type_specifier TIMES IDENTIFIER SEMICOLON
    (13) var_declaration_init -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT
    (21) type_specifier -> . CHAR
    (22) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 14
    VOID            shift and go to state 15

    declaration                    shift and go to state 16
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    function_definition            shift and go to state 6
    array_declaration              shift and go to state 7
    var_direct_declaration         shift and go to state 8
    var_pointer_declaration        shift and go to state 9
    var_declaration_init           shift and go to state 10
    type_specifier                 shift and go to state 11

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> function_declaration .

    INT             reduce using rule 5 (declaration -> function_declaration .)
    FLOAT           reduce using rule 5 (declaration -> function_declaration .)
    CHAR            reduce using rule 5 (declaration -> function_declaration .)
    VOID            reduce using rule 5 (declaration -> function_declaration .)
    $end            reduce using rule 5 (declaration -> function_declaration .)


state 6

    (6) declaration -> function_definition .

    INT             reduce using rule 6 (declaration -> function_definition .)
    FLOAT           reduce using rule 6 (declaration -> function_definition .)
    CHAR            reduce using rule 6 (declaration -> function_definition .)
    VOID            reduce using rule 6 (declaration -> function_definition .)
    $end            reduce using rule 6 (declaration -> function_definition .)


state 7

    (7) declaration -> array_declaration .

    INT             reduce using rule 7 (declaration -> array_declaration .)
    FLOAT           reduce using rule 7 (declaration -> array_declaration .)
    CHAR            reduce using rule 7 (declaration -> array_declaration .)
    VOID            reduce using rule 7 (declaration -> array_declaration .)
    $end            reduce using rule 7 (declaration -> array_declaration .)


state 8

    (8) var_declaration -> var_direct_declaration .

    INT             reduce using rule 8 (var_declaration -> var_direct_declaration .)
    FLOAT           reduce using rule 8 (var_declaration -> var_direct_declaration .)
    CHAR            reduce using rule 8 (var_declaration -> var_direct_declaration .)
    VOID            reduce using rule 8 (var_declaration -> var_direct_declaration .)
    $end            reduce using rule 8 (var_declaration -> var_direct_declaration .)
    RBRACE          reduce using rule 8 (var_declaration -> var_direct_declaration .)
    LBRACE          reduce using rule 8 (var_declaration -> var_direct_declaration .)
    IF              reduce using rule 8 (var_declaration -> var_direct_declaration .)
    WHILE           reduce using rule 8 (var_declaration -> var_direct_declaration .)
    RETURN          reduce using rule 8 (var_declaration -> var_direct_declaration .)
    CONTINUE        reduce using rule 8 (var_declaration -> var_direct_declaration .)
    BREAK           reduce using rule 8 (var_declaration -> var_direct_declaration .)
    FOR             reduce using rule 8 (var_declaration -> var_direct_declaration .)
    IDENTIFIER      reduce using rule 8 (var_declaration -> var_direct_declaration .)
    MINUS           reduce using rule 8 (var_declaration -> var_direct_declaration .)
    NOT             reduce using rule 8 (var_declaration -> var_direct_declaration .)
    INC             reduce using rule 8 (var_declaration -> var_direct_declaration .)
    DEC             reduce using rule 8 (var_declaration -> var_direct_declaration .)
    INT_LITERAL     reduce using rule 8 (var_declaration -> var_direct_declaration .)
    FLOAT_LITERAL   reduce using rule 8 (var_declaration -> var_direct_declaration .)
    CHAR_LITERAL    reduce using rule 8 (var_declaration -> var_direct_declaration .)
    STRING_LITERAL  reduce using rule 8 (var_declaration -> var_direct_declaration .)
    LPAREN          reduce using rule 8 (var_declaration -> var_direct_declaration .)
    ELSE            reduce using rule 8 (var_declaration -> var_direct_declaration .)


state 9

    (9) var_declaration -> var_pointer_declaration .

    INT             reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    FLOAT           reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    CHAR            reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    VOID            reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    $end            reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    RBRACE          reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    LBRACE          reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    IF              reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    WHILE           reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    RETURN          reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    CONTINUE        reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    BREAK           reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    FOR             reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    IDENTIFIER      reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    MINUS           reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    NOT             reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    INC             reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    DEC             reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    INT_LITERAL     reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    FLOAT_LITERAL   reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    CHAR_LITERAL    reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    STRING_LITERAL  reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    LPAREN          reduce using rule 9 (var_declaration -> var_pointer_declaration .)
    ELSE            reduce using rule 9 (var_declaration -> var_pointer_declaration .)


state 10

    (10) var_declaration -> var_declaration_init .

    INT             reduce using rule 10 (var_declaration -> var_declaration_init .)
    FLOAT           reduce using rule 10 (var_declaration -> var_declaration_init .)
    CHAR            reduce using rule 10 (var_declaration -> var_declaration_init .)
    VOID            reduce using rule 10 (var_declaration -> var_declaration_init .)
    $end            reduce using rule 10 (var_declaration -> var_declaration_init .)
    RBRACE          reduce using rule 10 (var_declaration -> var_declaration_init .)
    LBRACE          reduce using rule 10 (var_declaration -> var_declaration_init .)
    IF              reduce using rule 10 (var_declaration -> var_declaration_init .)
    WHILE           reduce using rule 10 (var_declaration -> var_declaration_init .)
    RETURN          reduce using rule 10 (var_declaration -> var_declaration_init .)
    CONTINUE        reduce using rule 10 (var_declaration -> var_declaration_init .)
    BREAK           reduce using rule 10 (var_declaration -> var_declaration_init .)
    FOR             reduce using rule 10 (var_declaration -> var_declaration_init .)
    IDENTIFIER      reduce using rule 10 (var_declaration -> var_declaration_init .)
    MINUS           reduce using rule 10 (var_declaration -> var_declaration_init .)
    NOT             reduce using rule 10 (var_declaration -> var_declaration_init .)
    INC             reduce using rule 10 (var_declaration -> var_declaration_init .)
    DEC             reduce using rule 10 (var_declaration -> var_declaration_init .)
    INT_LITERAL     reduce using rule 10 (var_declaration -> var_declaration_init .)
    FLOAT_LITERAL   reduce using rule 10 (var_declaration -> var_declaration_init .)
    CHAR_LITERAL    reduce using rule 10 (var_declaration -> var_declaration_init .)
    STRING_LITERAL  reduce using rule 10 (var_declaration -> var_declaration_init .)
    LPAREN          reduce using rule 10 (var_declaration -> var_declaration_init .)
    ELSE            reduce using rule 10 (var_declaration -> var_declaration_init .)


state 11

    (25) function_declaration -> type_specifier . IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (26) function_definition -> type_specifier . IDENTIFIER LPAREN param_list RPAREN compound_statement
    (14) array_declaration -> type_specifier . IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (15) array_declaration -> type_specifier . IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (16) array_declaration -> type_specifier . IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (17) array_declaration -> type_specifier . IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (18) array_declaration -> type_specifier . IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (11) var_direct_declaration -> type_specifier . IDENTIFIER SEMICOLON
    (12) var_pointer_declaration -> type_specifier . TIMES IDENTIFIER SEMICOLON
    (13) var_declaration_init -> type_specifier . IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER      shift and go to state 17
    TIMES           shift and go to state 18


state 12

    (19) type_specifier -> INT .

    IDENTIFIER      reduce using rule 19 (type_specifier -> INT .)
    TIMES           reduce using rule 19 (type_specifier -> INT .)


state 13

    (20) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 20 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 20 (type_specifier -> FLOAT .)


state 14

    (21) type_specifier -> CHAR .

    IDENTIFIER      reduce using rule 21 (type_specifier -> CHAR .)
    TIMES           reduce using rule 21 (type_specifier -> CHAR .)


state 15

    (22) type_specifier -> VOID .

    IDENTIFIER      reduce using rule 22 (type_specifier -> VOID .)
    TIMES           reduce using rule 22 (type_specifier -> VOID .)


state 16

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 17

    (25) function_declaration -> type_specifier IDENTIFIER . LPAREN param_list RPAREN SEMICOLON
    (26) function_definition -> type_specifier IDENTIFIER . LPAREN param_list RPAREN compound_statement
    (14) array_declaration -> type_specifier IDENTIFIER . LBRACKET expression RBRACKET SEMICOLON
    (15) array_declaration -> type_specifier IDENTIFIER . LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (16) array_declaration -> type_specifier IDENTIFIER . LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (17) array_declaration -> type_specifier IDENTIFIER . LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (18) array_declaration -> type_specifier IDENTIFIER . LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (11) var_direct_declaration -> type_specifier IDENTIFIER . SEMICOLON
    (13) var_declaration_init -> type_specifier IDENTIFIER . ASSIGN expression SEMICOLON

    LPAREN          shift and go to state 19
    LBRACKET        shift and go to state 21
    SEMICOLON       shift and go to state 20
    ASSIGN          shift and go to state 22


state 18

    (12) var_pointer_declaration -> type_specifier TIMES . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 23


state 19

    (25) function_declaration -> type_specifier IDENTIFIER LPAREN . param_list RPAREN SEMICOLON
    (26) function_definition -> type_specifier IDENTIFIER LPAREN . param_list RPAREN compound_statement
    (27) param_list -> . param_list COMMA param
    (28) param_list -> . param
    (29) param_list -> . empty
    (30) param -> . type_specifier IDENTIFIER
    (31) param -> . type_specifier IDENTIFIER LBRACKET RBRACKET
    (32) param -> . type_specifier TIMES IDENTIFIER
    (33) empty -> .
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT
    (21) type_specifier -> . CHAR
    (22) type_specifier -> . VOID

    RPAREN          reduce using rule 33 (empty -> .)
    COMMA           reduce using rule 33 (empty -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 14
    VOID            shift and go to state 15

    type_specifier                 shift and go to state 24
    param_list                     shift and go to state 25
    param                          shift and go to state 26
    empty                          shift and go to state 27

state 20

    (11) var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .

    INT             reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    CHAR            reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    VOID            reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    $end            reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LBRACE          reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IF              reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    WHILE           reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RETURN          reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    CONTINUE        reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    BREAK           reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FOR             reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    MINUS           reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    NOT             reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    INC             reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    DEC             reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    INT_LITERAL     reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT_LITERAL   reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    CHAR_LITERAL    reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    STRING_LITERAL  reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LPAREN          reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    ELSE            reduce using rule 11 (var_direct_declaration -> type_specifier IDENTIFIER SEMICOLON .)


state 21

    (14) array_declaration -> type_specifier IDENTIFIER LBRACKET . expression RBRACKET SEMICOLON
    (15) array_declaration -> type_specifier IDENTIFIER LBRACKET . expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (16) array_declaration -> type_specifier IDENTIFIER LBRACKET . RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (17) array_declaration -> type_specifier IDENTIFIER LBRACKET . expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (18) array_declaration -> type_specifier IDENTIFIER LBRACKET . RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (48) expression -> . assignment_expression
    (49) expression -> . binary_expression
    (50) expression -> . unary_expression
    (51) expression -> . function_call
    (52) expression -> . array_access
    (53) expression -> . term
    (54) assignment_expression -> . IDENTIFIER ASSIGN expression
    (55) assignment_expression -> . array_access ASSIGN expression
    (56) binary_expression -> . expression PLUS expression
    (57) binary_expression -> . expression MINUS expression
    (58) binary_expression -> . expression TIMES expression
    (59) binary_expression -> . expression DIVIDE expression
    (60) binary_expression -> . expression MOD expression
    (61) binary_expression -> . expression EQ expression
    (62) binary_expression -> . expression NEQ expression
    (63) binary_expression -> . expression LT expression
    (64) binary_expression -> . expression GT expression
    (65) binary_expression -> . expression LTE expression
    (66) binary_expression -> . expression GTE expression
    (67) binary_expression -> . expression AND expression
    (68) binary_expression -> . expression OR expression
    (69) unary_expression -> . MINUS expression
    (70) unary_expression -> . NOT expression
    (71) unary_expression -> . INC IDENTIFIER
    (72) unary_expression -> . DEC IDENTIFIER
    (73) unary_expression -> . IDENTIFIER INC
    (74) unary_expression -> . IDENTIFIER DEC
    (81) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (82) array_access -> . IDENTIFIER LBRACKET expression RBRACKET
    (75) term -> . IDENTIFIER
    (76) term -> . INT_LITERAL
    (77) term -> . FLOAT_LITERAL
    (78) term -> . CHAR_LITERAL
    (79) term -> . STRING_LITERAL
    (80) term -> . LPAREN expression RPAREN

    RBRACKET        shift and go to state 30
    IDENTIFIER      shift and go to state 28
    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    INC             shift and go to state 40
    DEC             shift and go to state 41
    INT_LITERAL     shift and go to state 43
    FLOAT_LITERAL   shift and go to state 44
    CHAR_LITERAL    shift and go to state 45
    STRING_LITERAL  shift and go to state 31
    LPAREN          shift and go to state 42

    expression                     shift and go to state 29
    assignment_expression          shift and go to state 32
    binary_expression              shift and go to state 33
    unary_expression               shift and go to state 34
    function_call                  shift and go to state 35
    array_access                   shift and go to state 36
    term                           shift and go to state 37

state 22

    (13) var_declaration_init -> type_specifier IDENTIFIER ASSIGN . expression SEMICOLON
    (48) expression -> . assignment_expression
    (49) expression -> . binary_expression
    (50) expression -> . unary_expression
    (51) expression -> . function_call
    (52) expression -> . array_access
    (53) expression -> . term
    (54) assignment_expression -> . IDENTIFIER ASSIGN expression
    (55) assignment_expression -> . array_access ASSIGN expression
    (56) binary_expression -> . expression PLUS expression
    (57) binary_expression -> . expression MINUS expression
    (58) binary_expression -> . expression TIMES expression
    (59) binary_expression -> . expression DIVIDE expression
    (60) binary_expression -> . expression MOD expression
    (61) binary_expression -> . expression EQ expression
    (62) binary_expression -> . expression NEQ expression
    (63) binary_expression -> . expression LT expression
    (64) binary_expression -> . expression GT expression
    (65) binary_expression -> . expression LTE expression
    (66) binary_expression -> . expression GTE expression
    (67) binary_expression -> . expression AND expression
    (68) binary_expression -> . expression OR expression
    (69) unary_expression -> . MINUS expression
    (70) unary_expression -> . NOT expression
    (71) unary_expression -> . INC IDENTIFIER
    (72) unary_expression -> . DEC IDENTIFIER
    (73) unary_expression -> . IDENTIFIER INC
    (74) unary_expression -> . IDENTIFIER DEC
    (81) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (82) array_access -> . IDENTIFIER LBRACKET expression RBRACKET
    (75) term -> . IDENTIFIER
    (76) term -> . INT_LITERAL
    (77) term -> . FLOAT_LITERAL
    (78) term -> . CHAR_LITERAL
    (79) term -> . STRING_LITERAL
    (80) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 28
    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    INC             shift and go to state 40
    DEC             shift and go to state 41
    INT_LITERAL     shift and go to state 43
    FLOAT_LITERAL   shift and go to state 44
    CHAR_LITERAL    shift and go to state 45
    STRING_LITERAL  shift and go to state 31
    LPAREN          shift and go to state 42

    expression                     shift and go to state 46
    assignment_expression          shift and go to state 32
    binary_expression              shift and go to state 33
    unary_expression               shift and go to state 34
    function_call                  shift and go to state 35
    array_access                   shift and go to state 36
    term                           shift and go to state 37

state 23

    (12) var_pointer_declaration -> type_specifier TIMES IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 47


state 24

    (30) param -> type_specifier . IDENTIFIER
    (31) param -> type_specifier . IDENTIFIER LBRACKET RBRACKET
    (32) param -> type_specifier . TIMES IDENTIFIER

    IDENTIFIER      shift and go to state 48
    TIMES           shift and go to state 49


state 25

    (25) function_declaration -> type_specifier IDENTIFIER LPAREN param_list . RPAREN SEMICOLON
    (26) function_definition -> type_specifier IDENTIFIER LPAREN param_list . RPAREN compound_statement
    (27) param_list -> param_list . COMMA param

    RPAREN          shift and go to state 50
